--- a/customer-love.html
+++ b/customer-love.html
@@ -491,9 +491,9 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-BhF1d2Jo.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-Db5COwFK.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-D8ea9d0Z.js">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-B3j86DaY.js">
   <link rel="stylesheet" crossorigin href="./assets/navbar-C0Vv_n5O.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
