--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-D8ea9d0Z.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-B3j86DaY.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-Cgem1tEs.js"></script>
+  <script type="module" crossorigin src="./assets/landing-CB-HR0sz.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-C0Vv_n5O.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
