--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -68,7 +68,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-D8ea9d0Z.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-B3j86DaY.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-C0Vv_n5O.css">
 </head>
 <body>
