--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-B3j86DaY.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-BT02lzw9.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-midkSuRd.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C0Vv_n5O.css">
+  <script type="module" crossorigin src="./assets/landing-BizEHeAl.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-C5uLkzCJ.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -87,10 +87,10 @@
 
         <!-- YouTube Video Thumbnail -->
         <div id="tutorial-video" class="max-w-4xl mx-auto mt-20">
-          <a href="https://www.youtube.com/watch?v=NPG7NfZfOps" target="_blank" class="block relative group">
+          <a href="https://www.youtube.com/watch?v=n0OTjIAL-WY" target="_blank" class="block relative group">
             <div class="relative bg-gray-900 rounded-3xl overflow-hidden aspect-video shadow-2xl">
               <img 
-                src="https://img.youtube.com/vi/NPG7NfZfOps/hqdefault.jpg" 
+                src="https://img.youtube.com/vi/n0OTjIAL-WY/maxresdefault.jpg" 
                 alt="Kortex Tutorial Video"
                 class="w-full h-full object-cover"
               >
