--- a/customer-love.html
+++ b/customer-love.html
@@ -491,10 +491,10 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-DzyBokIA.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-DJ_PYAIO.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-BT02lzw9.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C5uLkzCJ.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-U3wnY3A6.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-ublcqAlP.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Navbar will be injected by navbar.js -->
