--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -68,8 +68,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-BT02lzw9.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C5uLkzCJ.css">
+  <script type="module" crossorigin src="./assets/navbar-U3wnY3A6.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-ublcqAlP.css">
 </head>
 <body>
   <!-- Navbar will be injected by navbar.js -->
