--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-BzkUMurv.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-B4j90rHO.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-CwEp5hyJ.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-BFRWAA7C.css">
+  <script type="module" crossorigin src="./assets/landing-Q-L3hsLr.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-hoslV9EQ.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -212,14 +212,14 @@
               <div id="active-bg" class="absolute top-1 bottom-1 w-[calc(50%-4px)] bg-white rounded-full shadow-sm transition-all duration-300 ease-out translate-x-full"></div>
 
               <!-- Monthly Button -->
-              <button id="monthly-btn" class="relative z-10 px-8 py-2.5 rounded-full text-sm font-bold text-slate-500 transition-colors duration-300 w-48 focus:outline-none">
+              <button id="monthly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-500 transition-colors duration-300 w-32 focus:outline-none">
                 Monthly
               </button>
 
               <!-- Yearly Button -->
-              <button id="yearly-btn" class="relative z-10 px-8 py-2.5 rounded-full text-sm font-bold text-slate-900 transition-colors duration-300 w-48 focus:outline-none flex items-center justify-center gap-2">
+              <button id="yearly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-900 transition-colors duration-300 w-32 focus:outline-none flex items-center justify-center gap-2">
                 Yearly
-                <span class="text-[10px] font-black uppercase tracking-wider text-white bg-blue-500 px-2 py-0.5 rounded-full">2 months free</span>
+                <span class="text-[10px] font-black uppercase tracking-wider text-white bg-blue-500 px-2 py-0.5 rounded-full">50% OFF</span>
               </button>
             </div>
           </div>
