--- a/support.html
+++ b/support.html
@@ -8,10 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-BzkUMurv.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-B4j90rHO.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-CwEp5hyJ.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-BFRWAA7C.css">
+  <script type="module" crossorigin src="./assets/landing-Q-L3hsLr.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-hoslV9EQ.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
