--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
 
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-B4j90rHO.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-qFMiD7bu.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-Q-L3hsLr.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-hoslV9EQ.css">
+  <script type="module" crossorigin src="./assets/landing-DYrN-ZYR.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-zKti7Lr4.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -220,7 +220,7 @@
               <!-- Yearly Button -->
               <button id="yearly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-900 transition-colors duration-300 w-32 focus:outline-none flex items-center justify-center gap-2">
                 Yearly
-                <span class="text-[10px] font-black uppercase tracking-wider text-white bg-blue-500 px-2 py-0.5 rounded-full">50% OFF</span>
+                <span class="text-[10px] font-black uppercase tracking-wider text-emerald-700 bg-emerald-100 px-2.5 py-0.5 rounded-full shadow-sm">50% OFF</span>
               </button>
             </div>
           </div>
