--- a/customer-love.html
+++ b/customer-love.html
@@ -491,10 +491,10 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-CqQwVstv.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-1JMj6Rqc.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-B4j90rHO.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-hoslV9EQ.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-qFMiD7bu.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-zKti7Lr4.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Navbar will be injected by navbar.js -->
