--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
 
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-XRzJHxTf.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-Bs-vtVDz.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-DtCtUTCR.css">
+  <script type="module" crossorigin src="./assets/landing-BDwxXIVG.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -213,12 +213,12 @@
               <div id="active-bg" class="absolute top-1 bottom-1 w-[calc(50%-4px)] bg-white rounded-full shadow-sm transition-all duration-300 ease-out translate-x-full"></div>
 
               <!-- Monthly Button -->
-              <button id="monthly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-500 transition-colors duration-300 w-32 focus:outline-none">
+              <button id="monthly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-500 transition-colors duration-300 w-40 focus:outline-none">
                 Monthly
               </button>
 
               <!-- Yearly Button -->
-              <button id="yearly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-900 transition-colors duration-300 w-32 focus:outline-none flex items-center justify-center gap-2">
+              <button id="yearly-btn" class="relative z-10 px-4 py-1.5 rounded-full text-sm font-bold text-slate-900 transition-colors duration-300 w-40 focus:outline-none flex items-center justify-center gap-2">
                 Yearly
                 <span class="text-[9px] font-black uppercase tracking-widest text-emerald-700 bg-emerald-100 px-3 py-0.5 rounded-full shadow-sm whitespace-nowrap">50% OFF</span>
               </button>
