--- a/support.html
+++ b/support.html
@@ -8,10 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-XRzJHxTf.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-Bs-vtVDz.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-DtCtUTCR.css">
+  <script type="module" crossorigin src="./assets/landing-BDwxXIVG.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
