--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
-
+  <script src="https://cdn.paritydeals.com/banner.js" defer></script>
+<script>
+  window.paritydealsConfig = {
+    id: "promo_ebd83a8b12534790843da503b9ea4df9" 
+  };
+</script>
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
