--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
-  <script src="https://cdn.paritydeals.com/banner.js" defer></script>
-<script>
-  window.paritydealsConfig = {
-    id: "promo_ebd83a8b12534790843da503b9ea4df9" 
-  };
-</script>
+  
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-BDwxXIVG.js"></script>
+  <script type="module" crossorigin src="./assets/landing-DyqjPy8L.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
@@ -393,8 +388,8 @@
               <span class="bg-emerald-500 text-white text-xs font-black px-3 py-1 rounded-full uppercase tracking-wide">50% OFF</span>
             </div>
             <div class="flex items-baseline gap-1 flex-wrap">
-              <span class="text-3xl md:text-4xl font-black tracking-tighter">$49</span>
-              <span class="text-sm font-bold text-slate-500">one-time</span>
+              <span class="text-3xl md:text-4xl font-black tracking-tighter" id="lifetime-price">$49</span>
+              <span class="text-sm font-bold text-slate-500" id="lifetime-period">one-time</span>
             </div>
           </div>
           <ul class="space-y-3 mb-8 flex-grow">
