--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-lTu8Z3uG.js"></script>
+  <script type="module" crossorigin src="./assets/landing-Z1RBLdW7.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
@@ -384,8 +384,8 @@
           </div>
           <div class="mb-6">
             <div class="flex items-center gap-3 mb-2">
-              <span class="text-lg md:text-xl font-bold text-slate-400 line-through">$100</span>
-              <span class="bg-emerald-500 text-white text-xs font-black px-3 py-1 rounded-full uppercase tracking-wide">50% OFF</span>
+              <span class="text-lg md:text-xl font-bold text-slate-400 line-through" id="lifetime-cutoff">$100</span>
+              <span class="bg-emerald-500 text-white text-xs font-black px-3 py-1 rounded-full uppercase tracking-wide" id="lifetime-discount">50% OFF</span>
             </div>
             <div class="flex items-baseline gap-1 flex-wrap">
               <span class="text-3xl md:text-4xl font-black tracking-tighter" id="lifetime-price">$49</span>
