--- a/support.html
+++ b/support.html
@@ -6,7 +6,8 @@
   <title>Kortex Support - Get Help & Answers</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
