--- a/features.html
+++ b/features.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-LWtSe7Jp.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-CP54HnOT.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
+  <script type="module" crossorigin src="./assets/landing-F6KNeZd5.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
