--- a/customer-love.html
+++ b/customer-love.html
@@ -492,10 +492,10 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-Bw1AET61.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-CScnbnx9.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-4t1yeHIQ.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-LWtSe7Jp.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Navbar will be injected by navbar.js -->
