--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -69,8 +69,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-4t1yeHIQ.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-DYkkfbgX.css">
+  <script type="module" crossorigin src="./assets/navbar-LWtSe7Jp.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
 </head>
 <body>
   <!-- Navbar will be injected by navbar.js -->
