--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-LWtSe7Jp.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-F6KNeZd5.js"></script>
+  <script type="module" crossorigin src="./assets/landing-D8jTFXyH.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
@@ -807,8 +807,8 @@
           <button id="checkout-continue-btn" class="w-full bg-emerald-600 text-white py-3.5 rounded-xl font-black text-lg hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200 active:scale-95">
             Continue to Checkout
           </button>
-          <button id="checkout-cancel-btn" class="w-full bg-slate-100 text-slate-600 py-3.5 rounded-xl font-bold text-lg hover:bg-slate-200 transition-colors">
-            Cancel
+          <button id="checkout-install-btn" class="w-full bg-slate-100 text-slate-600 py-3.5 rounded-xl font-bold text-lg hover:bg-slate-200 transition-colors">
+            Install and login
           </button>
         </div>
       </div>
