--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
   
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-LWtSe7Jp.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-B4WZ8LXS.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-D8jTFXyH.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
+  <script type="module" crossorigin src="./assets/landing-BiGx4soS.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -733,6 +733,7 @@
           </div>
           <div class="flex gap-6 text-sm text-slate-600 font-semibold">
             <a href="privacy-policy.html" class="hover:text-emerald-600 transition-colors">Privacy Policy</a>
+            <a href="affiliate.html" class="hover:text-emerald-600 transition-colors">Affiliates</a>
             <a href="#" id="contact-link" class="hover:text-emerald-600 transition-colors">Contact</a>
             <a href="https://www.linkedin.com/in/yakshgandhi/" target="_blank" rel="noopener noreferrer" class="hover:text-emerald-600 transition-colors">LinkedIn</a>
           </div>
