--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -69,8 +69,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-LWtSe7Jp.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-D9avUxPP.css">
+  <script type="module" crossorigin src="./assets/navbar-B4WZ8LXS.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body>
   <!-- Navbar will be injected by navbar.js -->
@@ -194,7 +194,7 @@
 
         <div class="footer">
             <p>Developed by Yaksh Gandhi</p>
-            <p><a href="https://github.com/yaksh1/" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/yakshgandhi/" target="_blank">LinkedIn</a></p>
+            <p><a href="https://github.com/yaksh1/" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/yakshgandhi/" target="_blank">LinkedIn</a> | <a href="affiliate.html">Affiliate Program</a></p>
         </div>
     </div>
 
