--- a/customer-love.html
+++ b/customer-love.html
@@ -492,9 +492,9 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-C7xHLMSf.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-BT6QJmWP.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-B4WZ8LXS.js">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-UmNlScXc.js">
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
