--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -69,7 +69,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-B4WZ8LXS.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body>
