--- a/support.html
+++ b/support.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-B4WZ8LXS.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
   <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-BiGx4soS.js"></script>
+  <script type="module" crossorigin src="./assets/landing-DmDt5CIY.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
