--- a/features.html
+++ b/features.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
-  <script type="module" crossorigin src="./assets/faqs-uSly5jdm.js"></script>
-  <script type="module" crossorigin src="./assets/landing-Dq7H1anj.js"></script>
+  <script type="module" crossorigin src="./assets/faqs-C4W6xD-1.js"></script>
+  <script type="module" crossorigin src="./assets/landing-BIUctPEo.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
