--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -174,7 +174,7 @@
         <p>You have the right to:</p>
         <ul>
             <li><strong>Access Your Data:</strong> You can view your account information, usage statistics, and synced content through the extension interface</li>
-            <li><strong>Delete Your Account:</strong> You can request account deletion by contacting us at <a href="mailto:yakshgandhi1@gmail.com">yakshgandhi1@gmail.com</a>. This will delete your account data, but please note that subscription cancellations must be processed through the customer portal</li>
+            <li><strong>Delete Your Account:</strong> You can request account deletion by contacting us at <a href="mailto:kortexnotebooklm@gmail.com">kortexnotebooklm@gmail.com</a>. This will delete your account data, but please note that subscription cancellations must be processed through the customer portal</li>
             <li><strong>Manage Subscriptions:</strong> Cancel or modify your subscription at any time through the extension's "Manage Subscription" feature, which takes you to the Dodo Payments customer portal</li>
             <li><strong>Export Your Data:</strong> You can export your saved prompts and source views at any time through the extension</li>
         </ul>
@@ -190,7 +190,7 @@
 
         <h2>11. Contact Us</h2>
         <p>If you have any questions, concerns, or requests regarding this privacy policy or our data practices, please contact us at:</p>
-        <p><strong>Email:</strong> <a href="mailto:yakshgandhi1@gmail.com">yakshgandhi1@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:kortexnotebooklm@gmail.com">kortexnotebooklm@gmail.com</a></p>
 
         <div class="footer">
             <p>Developed by Yaksh Gandhi</p>
