--- a/support.html
+++ b/support.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
-  <script type="module" crossorigin src="./assets/faqs-C4W6xD-1.js"></script>
-  <script type="module" crossorigin src="./assets/landing-BIUctPEo.js"></script>
+  <script type="module" crossorigin src="./assets/faqs-DhkfoJzG.js"></script>
+  <script type="module" crossorigin src="./assets/landing-DVmaK5fp.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
@@ -74,7 +74,7 @@
         </a>
 
         <!-- Email Support card -->
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=yakshgandhi1@gmail.com" class="bg-white/80 backdrop-blur-md rounded-2xl border border-slate-200/60 hover:border-emerald-200/60 hover:shadow-lg hover:shadow-emerald-50/50 transition-all duration-300 p-8 group">
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kortexnotebooklm@gmail.com" class="bg-white/80 backdrop-blur-md rounded-2xl border border-slate-200/60 hover:border-emerald-200/60 hover:shadow-lg hover:shadow-emerald-50/50 transition-all duration-300 p-8 group">
           <div class="w-12 h-12 bg-blue-100 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform">
             <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
