--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/png" href="icons/icon128.png">
   
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-Bn1qWnE3.js"></script>
   <script type="module" crossorigin src="./assets/faqs-DhkfoJzG.js"></script>
-  <script type="module" crossorigin src="./assets/landing-DVmaK5fp.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
+  <script type="module" crossorigin src="./assets/landing-BpmYIXyX.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-5cQbtIgN.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -296,10 +296,10 @@
           <div class="mb-6">
             <div>
               <div class="flex items-baseline gap-1">
-                <span class="text-4xl md:text-5xl font-black tracking-tighter text-slate-900" id="pro-price">$2.4</span>
+                <span class="text-4xl md:text-5xl font-black tracking-tighter text-slate-900" id="pro-price">$2.9</span>
                 <span class="text-base font-bold text-slate-500" id="pro-period">/ month</span>
               </div>
-              <p class="text-xs font-bold text-emerald-600 mt-1" id="pro-billing-text">Billed as $29 / year</p>
+              <p class="text-xs font-bold text-emerald-600 mt-1" id="pro-billing-text">Billed as $35 / year</p>
             </div>
             <div class="billed-annually-text hidden mt-1" id="pro-savings">
               <span class="text-xs text-slate-400 font-semibold">billed annually</span>
@@ -383,12 +383,9 @@
             <p class="text-xs md:text-sm font-bold text-emerald-600 italic mt-1">Limited time offer.</p>
           </div>
           <div class="mb-6">
-            <div class="flex items-center gap-3 mb-2">
-              <span class="text-lg md:text-xl font-bold text-slate-400 line-through" id="lifetime-cutoff">$100</span>
-              <span class="bg-emerald-500 text-white text-xs font-black px-3 py-1 rounded-full uppercase tracking-wide" id="lifetime-discount">50% OFF</span>
-            </div>
+            
             <div class="flex items-baseline gap-1 flex-wrap">
-              <span class="text-3xl md:text-4xl font-black tracking-tighter" id="lifetime-price">$49</span>
+              <span class="text-3xl md:text-4xl font-black tracking-tighter" id="lifetime-price">$59</span>
               <span class="text-sm font-bold text-slate-500" id="lifetime-period">one-time</span>
             </div>
           </div>
