--- a/affiliate.html
+++ b/affiliate.html
@@ -8,12 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
-  <script type="module" crossorigin src="./assets/affiliate-RV4_Z6zE.js"></script>
+  <script type="module" crossorigin src="./assets/affiliate-CX89vHL0.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-Bn1qWnE3.js">
-  <link rel="modulepreload" crossorigin href="./assets/faqs-DhkfoJzG.js">
-  <link rel="modulepreload" crossorigin href="./assets/landing-CHbF6trG.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-5cQbtIgN.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-UmNlScXc.js">
+  <link rel="modulepreload" crossorigin href="./assets/faqs-DLWmK525.js">
+  <link rel="modulepreload" crossorigin href="./assets/landing-BlEhn6jV.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
