--- a/customer-love.html
+++ b/customer-love.html
@@ -492,10 +492,10 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-CgJRdvuF.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-C1B62P_E.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-Bn1qWnE3.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-5cQbtIgN.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-UmNlScXc.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Navbar will be injected by navbar.js -->
