--- a/features.html
+++ b/features.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-Bn1qWnE3.js"></script>
-  <script type="module" crossorigin src="./assets/faqs-DhkfoJzG.js"></script>
-  <script type="module" crossorigin src="./assets/landing-CHbF6trG.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-5cQbtIgN.css">
+  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
+  <script type="module" crossorigin src="./assets/faqs-DLWmK525.js"></script>
+  <script type="module" crossorigin src="./assets/landing-BlEhn6jV.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
